// Copyright 2017-2018 Plexus Interop Deutsche Bank AG
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package plexus;

option csharp_namespace = "Plexus.Interop.Protobuf";

// Stores UUID in little-endian format (i.e. in reversed RFC 4122 format).
// To convert to bytes on little-endian systems (most common case): concat (toBytes(hi), toBytes(lo))
// To convert to bytes on big-endian systems need to additionally reverse "hi" and "lo" parts: concat( reverse(toBytes(hi)), reverse(toBytes(lo)) )
message UniqueId {
    fixed64 lo = 1;
    fixed64 hi = 2;
}

message Error {
	string message = 1;
	string details = 2;
	string exception_name = 3;
}

message Completion {
	enum Status {
		Completed = 0;
		Canceled = 1;
		Failed = 2;
	}

	Status status = 1;
	Error error = 2;
}