//
// Copyright 2017-2022 Plexus Interop Deutsche Bank AG
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package interop.samples;

service IPTelephonyBroadcastService {
	option (broadcast) = true;

	rpc IncomingCallReceived (CallContext) returns (Empty);
	rpc CallCompleted (CompletedCallDetails) returns (Empty);
}

message PhoneNumber {
	uint32 country_code = 1;
	uint32 country_area_code = 2;
	string number = 3;	
}

message ClientDetails {
	int32 id = 1;
	string name = 2;
	string email = 5;
}

message CallContext {
	PhoneNumber phone_number = 1;
	ClientDetails client_details = 2;
}

message CompletedCallDetails {
	CallContext context = 1;
	uint32 call_length_in_seconds = 2;
}

message Empty {
}